UN-428 Scam page has been finalized and modified

--- a/locales/en.default.json
+++ b/locales/en.default.json
@@ -181,7 +181,8 @@
       "phone": "Phone Number",
       "message": "Message",
       "submit": "Send",
-      "post_success": "Thanks for contacting us. We'll get back to you as soon as possible."
+      "post_success": "Thanks for contacting us. We'll get back to you as soon as possible.",
+      "error_heading": "Please adjust the following:"
     }
   },
   "customer": {
